syntax = "proto3";

package front.admin.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "api/front/admin/v1;v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "系统相关";
    version: "1.0";
  };
};

//user start---------------------
message LoginReq {
  string userName = 1;
  string password = 2;
}

message LoginResp {
  string status = 1;
  string currentAuthority = 2;
  int32 id = 3;
  string userName = 4;
  string token = 5;
  int32 accessExpire = 6;
  int32 refreshAfter = 7;
  string code = 8;
  string message = 9;
}

message InfoReq {
  int64 UserId = 1;
}

message InfoResp {
  string avatar = 1;
  string name = 2;
  repeated MenuListTree menuTree = 3;
  string code = 4;
  string message = 5;
}

message UserAddReq {
  string email = 1;
  string mobile = 2;
  string name = 3;
  string nickName = 4;
  string avatar = 5;
  int32 deptId = 6;
  string createBy = 7;
  int32 roleId = 8;
  int32 jobId = 9;
}

message UserAddResp {
  string pong = 1;
}

message UserListReq {
  int64 current = 1;
  int64 pageSize = 2;
  string name = 3;
  string nickName = 4;
  string mobile = 5;
  string email = 6;
  int64 status = 7;
  int64 deptId = 8;
}

message UserListData{
  int32 id = 1;
  string name = 2;
  string nickName = 3;
  string avatar = 4;
  string password = 5;
  string salt = 6;
  string email = 7;
  string mobile = 8;
  int32 status = 9;
  int32 deptId = 10;
  string createBy = 11;
  string createTime = 12;
  string lastUpdateBy = 13;
  string lastUpdateTime = 14;
  int32 delFlag = 15;
  int32 jobId = 16;
  int32 roleId = 17;
  string roleName = 18;
  string jobName = 19;
  string deptName = 20;
}

message UserListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  UserListData data = 6;
  bool success = 7;
}

message SelectDataReq {
  int32 current = 1;
  int32 pageSize = 2;
}

message RoleAllResp {
  int32 id = 1;
  string name = 2;
  string remark = 3;
}

message DeptAllResp {
  int32 id = 1;
  string value = 2;
  string title = 3;
  int32 parentId = 4;
}

message JobAllResp {
  int32 id = 1;
  string jobName = 2;
}

message SelectDataResp {
  string code = 1;
  string message = 2;
  repeated  RoleAllResp roleAll = 3;
  repeated  DeptAllResp deptAll = 4;
  repeated  JobAllResp jobAll = 5;
}


message UserUpdateReq {
  int32 id = 1;
  string email = 2;
  string mobile = 3;
  string name = 4;
  string nickName = 5;
  string avatar = 6;
  int32 deptId = 7;
  string lastUpdateBy = 8;
  int32 roleId = 9;
  int32 status = 10;
  int32 jobId = 11;
}

message UserUpdateResp {
  string pong = 1;
}

message UserDeleteReq {
  int32 id = 1;
}

message UserDeleteResp {
  string pong = 1;
}


message ReSetPasswordReq {
  int32 id = 1;
  string lastUpdateBy = 2;
}

message ReSetPasswordResp {
  string pong = 1;
}

message UserStatusReq {
  int32 id = 1;
  int32 status = 2;
  string lastUpdateBy = 3;
}

message UserStatusResp {
  string pong = 1;
}
//user start---------------------

//role start---------------------
message RoleAddReq {
  string name = 1;
  string remark = 2;
  string createBy = 3;
  int32 status = 5;
}

message RoleAddResp {
  string pong = 1;
}

message RoleListReq {
  int64 current = 1;
  int64 pageSize = 2;
  string name = 3;
  int32 status = 4;
}

message RoleListData {
  int32 id = 1;
  string name = 2;
  string remark = 3;
  string createBy = 4;
  string createTime = 5;
  string lastUpdateBy = 6;
  string lastUpdateTime = 7;
  int32 delFlag = 8;
  int32 status = 9;
}

message RoleListResp {
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  RoleListData data = 6;
  bool success = 7;
}

message RoleUpdateReq {
  int32 id = 1;
  string name = 2;
  string remark = 3;
  string lastUpdateBy = 4;
  int32 status = 5;
}

message RoleUpdateResp {
  string pong = 1;
}

message RoleDeleteReq {
  int32 id = 1;
}

message RoleDeleteResp {
  string pong = 1;
}

message UpdateRoleRoleReq {
  string id = 1;
}

message UpdateRoleRoleResp {
  string pong = 1;
}

message QueryMenuByRoleIdReq {
  int64 id = 1;
}

message ListMenuData {
  string key = 1;
  string title = 2;
  int32 parentId = 3;
  string label = 4;
  int32  id = 5;
}


message QueryMenuByRoleIdResp {
  string code = 1;
  string message = 2;
  repeated int32 userData = 3;
  repeated ListMenuData allData = 4;

}

//role end---------------------

//menu start---------------------
message MenuAddReq {
  string name = 1;
  int32 parentId = 2;
  string url = 3;
  string perms = 4;
  int32 type = 5;
  string icon = 6;
  int32 orderNum = 7;
  string createBy = 8;
  string vuePath = 9;
  string vueComponent = 10;
  string vueIcon = 11;
  string vueRedirect = 12;
}

message MenuAddResp {
  string pong = 1;
}

message MenuListReq {
  //  int64 current  = 1;
  //  int64 pageSize = 2;
  string name = 1;
  string url = 2;
}

message MenuListData {
  int32 id = 1;
  string name = 2;
  int32 parentId = 3;
  string url = 4;
  string perms = 5;
  int32 type = 6;
  string icon = 7;
  int32 orderNum = 8;
  string createBy = 10;
  string createTime = 11;
  string lastUpdateBy = 12;
  string lastUpdateTime = 13;
  int32 delFlag = 14;
  string vuePath = 15;
  string vueComponent = 16;
  string vueIcon = 17;
  string vueRedirect = 18;
}

message MenuListTree {
  int32 id = 1;
  string name = 2;
  string icon = 3;
  int32 parentId = 4;
  string path = 5;
  string vue_path = 6;
  string vue_component = 7;
  string vue_Icon = 8;
  string vue_redirect = 9;
}

message MenuListResp{
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  MenuListData data = 6;
  bool success = 7;
}
message MenuUpdateReq {
  int32 id = 1;
  string name = 2;
  int32 parentId = 3;
  string url = 4;
  string perms = 5;
  int32 type = 6;
  string icon = 7;
  int32 orderNum = 8;
  string lastUpdateBy = 9;
  string vuePath = 10;
  string vueComponent = 11;
  string vueIcon = 12;
  string vueRedirect = 13;
}

message MenuUpdateResp {
  string pong = 1;
}

message MenuDeleteReq {
  int32 id = 1;
}

message MenuDeleteResp {
  string pong = 1;
}

message UpdateMenuRoleReq {
  int64 roleId = 1;
  repeated int64 menuIds = 2;
}

message UpdateMenuRoleResp {
  string pong = 1;
}
//menu end---------------------

//dict start---------------------
message DictAddReq {
  string value = 1;
  string label = 2;
  string type = 3;
  string description = 4;
  int32 sort = 5;
  string remarks = 6;
  string createBy = 7;
}

message DictAddResp {
  string pong = 1;
}

message DictListReq {
  int64 current = 1;
  int64 pageSize = 2;
  string value = 3;
  string label = 4;
  string type = 5;
  int32 delFlag = 6;
}

message DictListData {
  int32 id = 1;
  string value = 2;
  string label = 3;
  string type = 4;
  string description = 5;
  int32 sort = 6;
  string remarks = 7;
  string createBy = 10;
  string createTime = 11;
  string lastUpdateBy = 12;
  string lastUpdateTime = 13;
  int32 delFlag = 14;
}

message DictListResp{
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  DictListData data = 6;
  bool success = 7;
}

message DictUpdateReq {
  int32 id = 1;
  string value = 2;
  string label = 3;
  string type = 4;
  string description = 5;
  int32 sort = 6;
  string remarks = 7;
  string lastUpdateBy = 8;
}

message DictUpdateResp {
  string pong = 1;
}

message DictDeleteReq {
  int32 id = 1;
}

message DictDeleteResp {
  string pong = 1;
}
//dict end---------------------

//dept start---------------------
message DeptAddReq {
  string name = 1;
  int32 parentId = 2;
  int32 orderNum = 3;
  string createBy = 4;
}

message DeptAddResp {
  string pong = 1;
}

message DeptListReq {
  //  int64 current  = 1;
  //  int64 pageSize = 2;
  string name = 1;
  string createBy = 2;
}

message DeptListData {
  int32 id = 1;
  string name = 2;
  int32 parentId = 3;
  int32 orderNum = 4;
  string createBy = 5;
  string createTime = 6;
  string lastUpdateBy = 7;
  string lastUpdateTime = 8;
  int32 delFlag = 9;
}

message DeptListResp{
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  DeptListData data = 6;
  bool success = 7;
}
message DeptUpdateReq {
  int32 id = 1;
  string name = 2;
  int32 parentId = 3;
  int32 orderNum = 4;
  string lastUpdateBy = 7;
}

message DeptUpdateResp {
  string pong = 1;
}

message DeptDeleteReq {
  int32 id = 1;
}

message DeptDeleteResp {
  string pong = 1;
}
//dept end---------------------

//loginLog start---------------------
message LoginLogAddReq {
  string userName = 1;
  string status = 2;
  string ip = 3;
  string createBy = 4;
}

message LoginLogAddResp {
  string pong = 1;
}

message LoginLogListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message LoginLogListData {
  int32 id = 1;
  string userName = 2;
  string status = 3;
  string ip = 4;
  string createBy = 5;
  string createTime = 6;
  string lastUpdateBy = 7;
  string lastUpdateTime = 8;
}

message LoginLogListResp{
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  LoginLogListData data = 6;
  bool success = 7;
}
message LoginLogDeleteReq {
  int32 id = 1;
}

message LoginLogDeleteResp {
  string pong = 1;
}
//loginLog end---------------------

//sysLog start---------------------
message SysLogAddReq {
  string userName = 1;
  string operation = 2;
  string method = 3;
  string params = 4;
  int32 time = 5;
  string ip = 6;
  string createBy = 7;
}

message SysLogAddResp {
  string pong = 1;
}

message SysLogListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message SysLogListData {
  int32 id = 1;
  string userName = 2;
  string operation = 3;
  string method = 4;
  string params = 5;
  int32 time = 6;
  string ip = 7;
  string createBy = 8;
  string createTime = 9;
  string lastUpdateBy = 10;
  string lastUpdateTime = 11;
}

message SysLogListResp{
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  SysLogListData data = 6;
  bool success = 7;
}
message SysLogDeleteReq {
  int32 id = 1;
}

message SysLogDeleteResp {
  string pong = 1;
}
//sysLog end---------------------

//config start---------------------
message ConfigAddReq {
  string value = 1;
  string label = 2;
  string type = 3;
  string description = 4;
  int32 sort = 5;
  string remarks = 6;
  string createBy = 7;
}

message ConfigAddResp {
  string pong = 1;
}

message ConfigListReq {
  int64 current = 1;
  int64 pageSize = 2;
}

message ConfigListData {
  int32 id = 1;
  string value = 2;
  string label = 3;
  string type = 4;
  string description = 5;
  int32 sort = 6;
  string remarks = 7;
  int32 delFlag = 8;
  string createBy = 9;
  string createTime = 10;
  string lastUpdateBy = 11;
  string lastUpdateTime = 12;
}

message ConfigListResp{
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  ConfigListData data = 6;
  bool success = 7;
}
message ConfigUpdateReq {
  int32 id = 1;
  string value = 2;
  string label = 3;
  string type = 4;
  string description = 5;
  int32 sort = 6;
  string remarks = 7;
  string lastUpdateBy = 8;
}

message ConfigUpdateResp {
  string pong = 1;
}

message ConfigDeleteReq {
  int32 id = 1;
}

message ConfigDeleteResp {
  string pong = 1;
}

message UpdateConfigRoleReq {
  string ping = 1;
}

message UpdateConfigRoleResp {
  string pong = 1;
}
//config end---------------------

//job start---------------------
message JobAddReq {
  string jobName = 1;
  int32 orderNum = 2;
  string createBy = 3;
  string remarks = 4;
}

message JobAddResp {
  string pong = 1;
}

message JobListReq {
  int64 current = 1;
  int64 pageSize = 2;
  string jobName = 3;
}

message JobListData {
  int32 id = 1;
  string jobName = 2;
  int32 orderNum = 3;
  string createBy = 4;
  string createTime = 5;
  string lastUpdateBy = 6;
  string lastUpdateTime = 7;
  int32 delFlag = 8;
  string remarks = 9;
}

message JobListResp{
  string code = 1;
  string message = 2;
  int32 current = 3;
  int32 pageSize = 4;
  int32 total = 5;
  repeated  JobListData data = 6;
  bool success = 7;
}

message JobUpdateReq {
  int32 id = 1;
  string jobName = 2;
  int32 orderNum = 3;
  string lastUpdateBy = 4;
  string remarks = 5;
}

message JobUpdateResp {
  string pong = 1;
}

message JobDeleteReq {
  int32 id = 1;
}

message JobDeleteResp {
  string pong = 1;
}
//job end---------------------

service Sys {

  rpc Login(LoginReq) returns(LoginResp){
    option (google.api.http) = {
      post: "/api/sys/user/login"
      body: "*"
    };
  }
  rpc UserInfo(InfoReq) returns(InfoResp){
    option (google.api.http) = {
      get: "/api/sys/user/currentUser"
    };
  }
  rpc UserAdd(UserAddReq) returns(UserAddResp){
    option (google.api.http) = {
      post: "/api/sys/user/add"
      body: "*"
    };
  }
  rpc UserList(UserListReq) returns(UserListResp){
    option (google.api.http) = {
      post: "/api/sys/user/list"
      body: "*"
    };
  }

  rpc SelectAllData(SelectDataReq) returns(SelectDataResp){
    option (google.api.http) = {
      post: "/api/sys/user/selectAllData"
      body: "*"
    };
  }

  rpc UserUpdate(UserUpdateReq) returns(UserUpdateResp){
    option (google.api.http) = {
      post: "/api/sys/user/update"
      body: "*"
    };
  }
  rpc UserDelete(UserDeleteReq) returns(UserDeleteResp){
    option (google.api.http) = {
      post: "/api/sys/user/delete"
      body: "*"
    };
  }
  rpc ReSetPassword(ReSetPasswordReq) returns(ReSetPasswordResp){
    option (google.api.http) = {
      post: "/api/sys/reSetPassword"
      body: "*"
    };
  }
  rpc UpdateUserStatus(UserStatusReq) returns(UserStatusResp){
    option (google.api.http) = {
      post: "/api/sys/updateUserStatus"
      body: "*"
    };
  }

  rpc RoleAdd(RoleAddReq) returns(RoleAddResp){
    option (google.api.http) = {
      post: "/api/sys/role/add"
      body: "*"
    };
  }
  rpc RoleList(RoleListReq) returns(RoleListResp){
    option (google.api.http) = {
      post: "/api/sys/role/list"
      body: "*"
    };
  }
  rpc RoleUpdate(RoleUpdateReq) returns(RoleUpdateResp){
    option (google.api.http) = {
      post: "/api/sys/role/update"
      body: "*"
    };
  }
  rpc RoleDelete(RoleDeleteReq) returns(RoleDeleteResp){
    option (google.api.http) = {
      post: "/api/sys/role/delete"
      body: "*"
    };
  }

  rpc QueryMenuByRoleId(QueryMenuByRoleIdReq) returns(QueryMenuByRoleIdResp){
    option (google.api.http) = {
      post: "/api/sys/role/queryMenuByRoleId"
      body: "*"
    };
  }
  rpc UpdateMenuRole(UpdateMenuRoleReq) returns(UpdateMenuRoleResp){
    option (google.api.http) = {
      post: "/api/sys/role/updateRoleMenu"
      body: "*"
    };
  }

  rpc MenuAdd(MenuAddReq) returns(MenuAddResp){
    option (google.api.http) = {
      post: "/api/sys/menu/add"
      body: "*"
    };
  }
  rpc MenuList(MenuListReq) returns(MenuListResp){
    option (google.api.http) = {
      post: "/api/sys/menu/list"
      body: "*"
    };
  }
  rpc MenuUpdate(MenuUpdateReq) returns(MenuUpdateResp){
    option (google.api.http) = {
      post: "/api/sys/menu/update"
      body: "*"
    };
  }
  rpc MenuDelete(MenuDeleteReq) returns(MenuDeleteResp){
    option (google.api.http) = {
      post: "/api/sys/menu/delete"
      body: "*"
    };
  }

  rpc DictAdd(DictAddReq) returns(DictAddResp){
    option (google.api.http) = {
      post: "/api/sys/dict/add"
      body: "*"
    };
  }
  rpc DictList(DictListReq) returns(DictListResp){
    option (google.api.http) = {
      post: "/api/sys/dict/list"
      body: "*"
    };
  }
  rpc DictUpdate(DictUpdateReq) returns(DictUpdateResp){
    option (google.api.http) = {
      post: "/api/sys/dict/update"
      body: "*"
    };
  }
  rpc DictDelete(DictDeleteReq) returns(DictDeleteResp){
    option (google.api.http) = {
      post: "/api/sys/dict/delete"
      body: "*"
    };
  }

  rpc DeptAdd(DeptAddReq) returns(DeptAddResp){
    option (google.api.http) = {
      post: "/api/sys/dept/add"
      body: "*"
    };
  }
  rpc DeptList(DeptListReq) returns(DeptListResp){
    option (google.api.http) = {
      post: "/api/sys/dept/list"
      body: "*"
    };
  }
  rpc DeptUpdate(DeptUpdateReq) returns(DeptUpdateResp){
    option (google.api.http) = {
      post: "/api/sys/dept/update"
      body: "*"
    };
  }
  rpc DeptDelete(DeptDeleteReq) returns(DeptDeleteResp){
    option (google.api.http) = {
      post: "/api/sys/dept/delete"
      body: "*"
    };
  }

  rpc LoginLogList(LoginLogListReq) returns(LoginLogListResp){
    option (google.api.http) = {
      post: "/api/sys/loginLog/list"
      body: "*"
    };
  }
  rpc LoginLogDelete(LoginLogDeleteReq) returns(LoginLogDeleteResp){
    option (google.api.http) = {
      post: "/api/sys/loginLog/delete"
      body: "*"
    };
  }

  rpc SysLogList(SysLogListReq) returns(SysLogListResp){
    option (google.api.http) = {
      post: "/api/sys/sysLog/list"
      body: "*"
    };
  }
  rpc SysLogDelete(SysLogDeleteReq) returns(SysLogDeleteResp){
    option (google.api.http) = {
      post: "/api/sys/sysLog/delete"
      body: "*"
    };
  }

  rpc JobAdd(JobAddReq) returns(JobAddResp){
    option (google.api.http) = {
      post: "/api/sys/job/add"
      body: "*"
    };
  }
  rpc JobList(JobListReq) returns(JobListResp){
    option (google.api.http) = {
      post: "/api/sys/job/list"
      body: "*"
    };
  }
  rpc JobUpdate(JobUpdateReq) returns(JobUpdateResp){
    option (google.api.http) = {
      post: "/api/sys/job/update"
      body: "*"
    };
  }
  rpc JobDelete(JobDeleteReq) returns(JobDeleteResp){
    option (google.api.http) = {
      post: "/api/sys/job/delete"
      body: "*"
    };
  }
}